src/App.css
html, body, .root {
  height: 100%;
  min-height: 100%;
}

html{
  background: url('/public/assets/img/background-home.png') no-repeat center center fixed; 
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  scroll-behavior: smooth;

}

.layout{
  overflow-y: scroll;

}

@tailwind base;
@tailwind components;
@tailwind utilities;

@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');

*{
    font-family: 'Plus Jakarta Sans', Helvetica, sans-serif;
};



.styled-scrollbars {
    /* Foreground, Background */
    scrollbar-color: #999 #333;
  }
  .styled-scrollbars::-webkit-scrollbar {
    width: 10px; /* Mostly for vertical scrollbars */
    height: 10px; /* Mostly for horizontal scrollbars */
  }
  .styled-scrollbars::-webkit-scrollbar-thumb { /* Foreground */
    background: #999;
  }
  .styled-scrollbars::-webkit-scrollbar-track { /* Background */
    background: #333;
  }

